@startuml FastDelivery_DiagramaClasses

class Admnistrador {

}

class Recenseador {

}

class Usuário {

}

class Morador {
    cpf
    nome
    sobrenome
    cep
    num_casa
    sexo
    renda
    data_nascimento
    estado_civil
    etnia
    escolaridade
    email
    telefone
    nacionalidade
    deficiencia
    num_dependentes
    religiao
}

class Domicilio {
    proprietario
    uf
    municipio
    distrito
    subdistrito
    setor
    numero
    especie
    tipo
    quantidade_comodos
    acesso_internet
    abastecimento_agua
    coleta_esgoto
    distribuicao_agua
    lixo_destino
    energia_eletrica
}

class Indicadores {
    pergunta
    resposta
    descricao
}

' Relacionamentos
Admnistrador -- Morador
Admnistrador -- Indicadores
Admnistrador -- Domicilio
Recenseador -- Morador
Recenseador -- Indicadores
Recenseador -- Domicilio
Usuário -- Indicadores

@enduml